# patentdoc-conv

./: PatentdocConv.spec  README.md  build_exe.bat  pyproject.toml  requirements.txt
archive/: README.md  patentdoc-conv-gui.bat  patentdoc-conv.bat
archive/legacy_flat_layout/: __init__.py  __main__.py  builder.py  pdf_export.py  templates.py
archive/legacy_flat_layout/assets/: __init__.py  fig_viewer.css
src/patentdoc_conv/: __init__.py  __main__.py  cli.py  gui.py  utils.py
src/patentdoc_conv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/patentdoc_conv/assets/: __init__.py  common.css  fig_viewer.js  text_viewer.css  text_viewer.js
src/patentdoc_conv/core/: __init__.py  document_loader.py  html_generator.py  models.py  pdf_generator.py  service.py  templates.py
src/patentdoc_conv/gui/: __init__.py  main_window.py
tests/: verify_entrypoint.py
